--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+html{overflow-x: hidden;}
 body {
     margin: 0;
     padding: 0;
@@ -11,8 +12,8 @@ body {
 }
 
 #first-page {
-    width: 40rem;
-    height: 38rem;
+    width: 360px;
+    height: 32rem;
     margin: 30px auto;
 }
 
